--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Joh4nsennn blog</title>
+        <title>Johansennn blog</title>
     </head>
     <body>
         <div>
